done post category admin page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.jpa.properties.hibernate.implicit_naming_strategy=org.hibernate.boot.mode
 spring.jpa.properties.hibernate.physical_naming_strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.javax.persistence.validation.mode=none
 spring.thymeleaf.encoding=utf-8
+spring.banner.location=classpath:static/banner.txt
